tests/fixtures/invalid/divmod_set_float.py
# Cannot call divmod() with Set[int], Float
x = divmod({1, 2, 3}, 1.0)
